# flashcards

./: .flake8  .gitignore  .gitlab-ci.yml  _redirects  backup.py  export_and_build_docs.py  mkdocs.yml  notify.py  progress.py  pyproject.toml  utils.py  zensical.toml
.forgejo/workflows/: build.yml
.github/workflows/: backup.yml  build.yml  linting.yml  notify.yml
docs/: index.md
docs/css/: overrides.css
docs/javascripts/: linked-tabs.js  tablesort.js
docs/js/: linked-tabs.js
docs/questions/: concepts.md  index.md  start.md
docs/questions/anki/: concepts.md  creating.md  importing.md  index.md  reviewing.md
overrides/: main.html
