[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashcards"
version = "2024.4.6"
description = "My own Anki flashcards"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["anki", "markdown-include", "mkdocs", "mkdocs-material", "mkdocs-minify-plugin", "pytz"]

	[project.optional-dependencies]
	dev = ["black", "flake8", "isort", "pylint"]

	[project.urls]
	Homepage = "https://github.com/lfavole/flashcards"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.main]
jobs = 0
disable = [
    "bad-indentation",
    "bare-except",
    "fixme",
    "global-statement",
    "import-outside-toplevel",
    "invalid-str-returned",
    "line-too-long",
    "missing-module-docstring",
    "missing-timeout",
    "no-member",
    "protected-access",
    "unspecified-encoding",
]
include-naming-hint = "y"

[tool.pylint.basic]
allowed-redefined-builtins = "id"
good-names = ["f", "i", "id"]
no-docstring-rgx = "^(main|__.*__)$"

[tool.setuptools]
py-modules = []
