[project]
name = "flashcards"
version = "2024.4.6"
description = "My own Anki flashcards"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["anki", "markdown-include", "mkdocs", "mkdocs-material", "mkdocs-minify-plugin", "pytz"]

	[project.optional-dependencies]
	dev = ["ruff"]

	[project.urls]
	Homepage = "https://github.com/lfavole/flashcards"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = ["COM812", "CPY", "D203", "D212", "DOC201", "DOC402", "DTZ", "EXE", "FBT", "FIX", "S310", "T", "TD002", "TD003"]

[tool.ruff.format]
preview = true
