[project]
name = "flashcards"
version = "2025.12.1"
description = "My own Anki flashcards"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = ["anki", "markdown-include ~= 0.8", "toml ~= 0.10", "zensical ~= 0.0"]

	[project.optional-dependencies]
	dev = ["ruff ~= 0.14"]

	[project.urls]
	Homepage = "https://github.com/lfavole/flashcards"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = ["COM812", "CPY", "D203", "D212", "DOC201", "DOC402", "DTZ", "EXE", "FBT", "FIX", "S310", "T", "TD002", "TD003"]

[tool.ruff.format]
preview = true
